--- a/app/components/Home/HomePage.module.css
+++ b/app/components/Home/HomePage.module.css
@@ -8,7 +8,7 @@
   flex: 50%;
   overflow: hidden;
   min-height: 100vh;
-  background: #1c4a2abf;
+  background: #12371ebf;
   align-content: center;
   color: #ffffffdf;
   line-height: 1.4;
